confirm when saving a property to a more specific context

--- a/rest/src/main/webapp/repo/create/createRepo.html
+++ b/rest/src/main/webapp/repo/create/createRepo.html
@@ -158,12 +158,25 @@
                             </button>
                         </div>
                     </div>
-
-
                 </div>
             </div>
 
-            <div class="padded-top30">
+            <div class="padded-top20">
+                <div>
+                    <label class="col-sm-9 control-label">
+                        <input type="checkbox"
+                               ng-model="repo.confirmContextChange"
+                               class="inline-checkbox">
+                    </label>
+
+                    <div class="col-sm-9">
+                        <strong>Confirm All Context Changes</strong><br>
+                        <span class="dim">Any property or file context change will require the user to confirm their intentions.</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="padded-top50">
                 <button class="btn btn-lg btn-success"
                         ng-click="createRepository()">
                     Create Repository
